# CS59-1-event-representation-benchmark

./: .gitignore  .gitmodules  LICENSE  README.md  environment.yml  metadata  optical-flow  paper_overleaf  requirements.txt  run_all_gen1_methods.py  run_benchmark.py  summarize_gen1_results.py  test_evrepsl_local.py  test_registry.py  train.py  train_classification.py  train_est_e2e_classification.py  train_gen1_detection.py  train_get_classification.py  train_traditional_classification.py  wandb.py
optical-flow/: README.md  README_FOR_GROUP.md  pyproject.toml
optical-flow/docs/: ADAPTER_STATUS.md  AUTODL_RERUN_INSTRUCTIONS.md  CLAUDE_CODE_HANDOFF.md  GPU_RERUN_INSTRUCTIONS.md  MVSEC_E100_EARLYSTOP_REPORT_CN_20260501.md  MVSEC_E100_EARLYSTOP_RESULTS_20260501.md  MVSEC_TASK_REVIEW.md  MVSEC_TASK_REVIEW_20260426.md  PROJECT_STATUS.md
optical-flow/results_float64_cached_20260516/: original_od12_if123_full6m_binary_event_image_e100_block-random_earlystop.json  original_od12_if123_full6m_est_e100_block-random_earlystop.json  original_od12_if123_full6m_event_frame_e100_block-random_earlystop.json  original_od12_if123_full6m_evrepsl_e100_block-random_earlystop.json  original_od12_if123_full6m_get_e100_block-random_earlystop.json  original_od12_if123_full6m_matrixlstm_e100_block-random_earlystop.json  original_od12_if123_full6m_time_surface_e100_block-random_earlystop.json  original_od12_if123_full6m_timestamp_image_e100_block-random_earlystop.json  original_od12_if123_full6m_voxel_grid_e100_block-random_earlystop.json
optical-flow/scripts/: autodl_outdoor_pipeline.sh  (+11 more)
(+310 files in other folders)
